--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ input[type=submit]:hover {
     font-family: "Nunito",sans-serif;
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
-@media only screen and (max-width: 320px){
+/*@media only screen and (max-width: 320px){
     .section1{
         display: block;
     }
@@ -368,7 +368,7 @@ input[type=submit]:hover {
     .home .right{
         display: none;
     }
-} 
+} */
 
 </style>
 <body>
